fix (sidebar): Align buttons to the left
https://github.com/eXistSolutions/hsg-shell/commit/e8e694db982a4b728a4bd
1a5c08fb0315e25dc29#commitcomment-17195593

--- a/app/scss/_sidenav.scss
+++ b/app/scss/_sidenav.scss
@@ -18,6 +18,10 @@
   @extend .panel;
   @extend .panel-default;
   font-size: $small-font-size;
+
+  .hsg-ebook-list {
+    text-align: left;
+  }
 }
 
 // Top Heading Wrapper
